<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dot_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="e0772744@u.nus.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <!-- <depend>xacro</depend> -->
  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>robot_localization</depend> -->
  <!-- <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
